prod_snapshot_2015-09-24_1030/objects/PPCOrderDetailTemp__c.object
<CustomObject>
    <fields>
        <fullName>AdditionalNotes__c</fullName>
        <label>Additional Notes</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessDescription__c</fullName>
        <label>Business Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessDifferentiators__c</fullName>
        <label>Business Differentiators</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessWebsite__c</fullName>
        <label>Business Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CampaignGoals__c</fullName>
        <label>Campaign Goals</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CopyInstructions__c</fullName>
        <label>Copy Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DesignInstructions__c</fullName>
        <label>Design Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EnableAdWords__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable AdWords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableBingAds__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable BingAds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAdCopyApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ad Copy Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReadyForFullfilment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ready For Fullfilment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KTFocusCategoryId__c</fullName>
        <label>Focus Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KTFocusCategoryName__c</fullName>
        <label>Focus Category Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KTIndustryCategoryId__c</fullName>
        <label>Industry Category</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KTIndustryCategoryName__c</fullName>
        <label>Industry Category Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KTReasonForOther__c</fullName>
        <label>Reason For Other Industry or Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LeadCaptureEmail__c</fullName>
        <label>Lead Capture Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagementFee__c</fullName>
        <label>Management Fee</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>29.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NegativeTerms__c</fullName>
        <label>Negative Terms</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <label>OpportunityLineItemId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductsAndServices__c</fullName>
        <label>Products &amp; Services</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProxyEligible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Proxy Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpecialsAndOffers__c</fullName>
        <label>Specials And Offers</label>
        <type>TextArea</type>
    </fields>
    <label>PPC Order Detail Temp</label>
    <nameField>
        <label>PPCOrderDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPC Order Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>